@@ -510,7 +510,7 @@ region_log_stats(region_type *region)
 {
 	char buf[10240], *str=buf;
 	int len=0;
-	snprintf(str, 10240, "%lu objects (%lu small/%lu large), %lu bytes allocated (%lu wasted) in %lu chunks, %lu cleanups, %lu in recyclebin%n",
+	snprintf(str, sizeof(buf), "%lu objects (%lu small/%lu large), %lu bytes allocated (%lu wasted) in %lu chunks, %lu cleanups, %lu in recyclebin%n",
 		(unsigned long) (region->small_objects + region->large_objects),
 		(unsigned long) region->small_objects,
 		(unsigned long) region->large_objects,
@@ -532,7 +532,7 @@ region_log_stats(region_type *region)
 				el = el->next;
 			}
 			if(i%ALIGNMENT == 0 && i!=0) {
-				snprintf(str, 10240, " %lu%n", 
+				snprintf(str, sizeof(buf)-(str-buf), " %lu%n", 
 					(unsigned long)count, &len);
 				str+=len;
 			}
